--- a/_modules/iceprod/server/dbmethods.html
+++ b/_modules/iceprod/server/dbmethods.html
@@ -271,7 +271,7 @@
     <span class="k">def</span> <span class="nf">_send_to_master</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">updates</span><span class="p">,</span> <span class="n">callback</span><span class="o">=</span><span class="k">None</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Send an update to the master&quot;&quot;&quot;</span>
         <span class="k">try</span><span class="p">:</span>
-            <span class="k">yield</span> <span class="bp">self</span><span class="o">.</span><span class="n">parent</span><span class="o">.</span><span class="n">modules</span><span class="p">[</span><span class="s">&#39;master_updater&#39;</span><span class="p">][</span><span class="s">&#39;add&#39;</span><span class="p">](</span><span class="n">arg</span><span class="o">=</span><span class="n">updates</span><span class="p">)</span>
+            <span class="k">yield</span> <span class="bp">self</span><span class="o">.</span><span class="n">parent</span><span class="o">.</span><span class="n">modules</span><span class="p">[</span><span class="s">&#39;master_updater&#39;</span><span class="p">][</span><span class="s">&#39;add&#39;</span><span class="p">](</span><span class="n">updates</span><span class="p">)</span>
         <span class="k">except</span> <span class="ne">Exception</span><span class="p">:</span>
             <span class="n">logger</span><span class="o">.</span><span class="n">warn</span><span class="p">(</span><span class="s">&#39;_send_to_master() error&#39;</span><span class="p">,</span><span class="n">exc_info</span><span class="o">=</span><span class="k">True</span><span class="p">)</span>
 
