--- a/_modules/iceprod/server/modules/master_updater.html
+++ b/_modules/iceprod/server/modules/master_updater.html
@@ -216,7 +216,8 @@
                 <span class="bp">self</span><span class="o">.</span><span class="n">io_loop</span><span class="o">.</span><span class="n">call_later</span><span class="p">(</span><span class="mi">60</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">_send</span><span class="p">)</span>
             <span class="k">else</span><span class="p">:</span>
                 <span class="c"># remove data we just successfully sent</span>
-                <span class="bp">self</span><span class="o">.</span><span class="n">buffer</span><span class="o">.</span><span class="n">popleft</span><span class="p">()</span>
+                <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">buffer</span><span class="p">:</span>
+                    <span class="bp">self</span><span class="o">.</span><span class="n">buffer</span><span class="o">.</span><span class="n">popleft</span><span class="p">()</span>
                 <span class="k">yield</span> <span class="bp">self</span><span class="o">.</span><span class="n">_save</span><span class="p">()</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">io_loop</span><span class="o">.</span><span class="n">add_callback</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_send</span><span class="p">)</span>
         <span class="k">else</span><span class="p">:</span>
