--- a/_modules/iceprod/server/modules/db.html
+++ b/_modules/iceprod/server/modules/db.html
@@ -616,15 +616,15 @@
                                         <span class="n">x</span> <span class="o">+=</span> <span class="s">&#39; MEDIUMTEXT NOT NULL DEFAULT &quot;&quot; &#39;</span>
                                     <span class="n">addcols</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">x</span><span class="p">)</span>
 
-                            <span class="n">full_sql</span> <span class="o">=</span> <span class="s">&#39;alter table &#39;</span><span class="o">+</span><span class="n">table_name</span><span class="o">+</span><span class="s">&#39; &#39;</span>
+                            <span class="n">full_sql</span> <span class="o">=</span> <span class="s">&#39;ALTER TABLE &#39;</span><span class="o">+</span><span class="n">table_name</span><span class="o">+</span><span class="s">&#39; &#39;</span>
                             <span class="k">if</span> <span class="n">addcols</span><span class="p">:</span>
-                                <span class="n">full_sql</span> <span class="o">+=</span> <span class="s">&#39;add column &#39;</span>
-                                <span class="n">full_sql</span> <span class="o">+=</span> <span class="s">&#39;, add column &#39;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">col</span> <span class="k">for</span> <span class="n">col</span> <span class="ow">in</span> <span class="n">addcols</span><span class="p">)</span>
+                                <span class="n">full_sql</span> <span class="o">+=</span> <span class="s">&#39;ADD COLUMN &#39;</span>
+                                <span class="n">full_sql</span> <span class="o">+=</span> <span class="s">&#39;, ADD COLUMN &#39;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">col</span> <span class="k">for</span> <span class="n">col</span> <span class="ow">in</span> <span class="n">addcols</span><span class="p">)</span>
                             <span class="k">if</span> <span class="n">addcols</span> <span class="ow">and</span> <span class="n">rmcols</span><span class="p">:</span>
                                 <span class="n">full_sql</span> <span class="o">+=</span> <span class="s">&#39;, &#39;</span>
                             <span class="k">if</span> <span class="n">rmcols</span><span class="p">:</span>
-                                <span class="n">full_sql</span> <span class="o">+=</span> <span class="s">&#39;drop column &#39;</span>
-                                <span class="n">full_sql</span> <span class="o">+=</span> <span class="s">&#39;, drop column &#39;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="s">&#39;`&#39;</span><span class="o">+</span><span class="n">col</span><span class="o">+</span><span class="s">&#39;`&#39;</span> <span class="k">for</span> <span class="n">col</span> <span class="ow">in</span> <span class="n">rmcols</span><span class="p">)</span>
+                                <span class="n">full_sql</span> <span class="o">+=</span> <span class="s">&#39;DROP COLUMN &#39;</span>
+                                <span class="n">full_sql</span> <span class="o">+=</span> <span class="s">&#39;, DROP COLUMN &#39;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">col</span> <span class="k">for</span> <span class="n">col</span> <span class="ow">in</span> <span class="n">rmcols</span><span class="p">)</span>
                             <span class="n">cur</span><span class="o">.</span><span class="n">execute</span><span class="p">(</span><span class="n">full_sql</span><span class="p">)</span>
                         <span class="k">else</span><span class="p">:</span>
                             <span class="c"># table is good</span>
