--- a/_modules/iceprod/server/modules/db.html
+++ b/_modules/iceprod/server/modules/db.html
@@ -601,7 +601,8 @@
                             <span class="n">addcols</span> <span class="o">=</span> <span class="p">[]</span>
                             <span class="k">for</span> <span class="n">x</span> <span class="ow">in</span> <span class="n">cols</span><span class="p">:</span>
                                 <span class="k">if</span> <span class="n">x</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">curcols</span><span class="p">:</span>
-                                    <span class="n">t</span> <span class="o">=</span> <span class="s">&#39;`&#39;</span><span class="o">+</span><span class="bp">self</span><span class="o">.</span><span class="n">tables</span><span class="p">[</span><span class="n">table_name</span><span class="p">][</span><span class="n">x</span><span class="p">]</span><span class="o">+</span><span class="s">&#39;`&#39;</span>
+                                    <span class="n">t</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">tables</span><span class="p">[</span><span class="n">table_name</span><span class="p">][</span><span class="n">x</span><span class="p">]</span>
+                                    <span class="n">x</span> <span class="o">=</span> <span class="s">&#39;`&#39;</span><span class="o">+</span><span class="n">x</span><span class="o">+</span><span class="s">&#39;`&#39;</span>
                                     <span class="k">if</span> <span class="n">t</span> <span class="o">==</span> <span class="s">&#39;str&#39;</span><span class="p">:</span>
                                         <span class="n">x</span> <span class="o">+=</span> <span class="s">&#39; VARBINARY(255) NOT NULL &#39;</span>
                                     <span class="k">elif</span> <span class="n">t</span> <span class="o">==</span> <span class="s">&#39;int&#39;</span><span class="p">:</span>
@@ -624,7 +625,8 @@
                                 <span class="n">full_sql</span> <span class="o">+=</span> <span class="s">&#39;, &#39;</span>
                             <span class="k">if</span> <span class="n">rmcols</span><span class="p">:</span>
                                 <span class="n">full_sql</span> <span class="o">+=</span> <span class="s">&#39;DROP COLUMN &#39;</span>
-                                <span class="n">full_sql</span> <span class="o">+=</span> <span class="s">&#39;, DROP COLUMN &#39;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">col</span> <span class="k">for</span> <span class="n">col</span> <span class="ow">in</span> <span class="n">rmcols</span><span class="p">)</span>
+                                <span class="n">full_sql</span> <span class="o">+=</span> <span class="s">&#39;, DROP COLUMN &#39;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="s">&#39;`&#39;</span><span class="o">+</span><span class="n">col</span><span class="o">+</span><span class="s">&#39;`&#39;</span> <span class="k">for</span> <span class="n">col</span> <span class="ow">in</span> <span class="n">rmcols</span><span class="p">)</span>
+                            <span class="n">logger</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;%s&#39;</span><span class="p">,</span> <span class="n">full_sql</span><span class="p">)</span>
                             <span class="n">cur</span><span class="o">.</span><span class="n">execute</span><span class="p">(</span><span class="n">full_sql</span><span class="p">)</span>
                         <span class="k">else</span><span class="p">:</span>
                             <span class="c"># table is good</span>
